--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.3",
     "wait-on": "^7.2.0"
+  },
+  "dependencies": {
+    "react": "^19.0.0",
+    "vite": "^6.0.11"
   }
 }
